layout bug

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -250,7 +250,7 @@ ul.listing li.listing-item time {
 }
 
 ul.listing li.listing-item a {
-	color: #b22222
+	color: #b22222;
 	font-weight: 400;
 	font-family: 'Titillium Web', sans-serif;
 }
